// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary component with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </p>
</div>
`;

exports[`should render ExpenseSummary component with two or more expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $1,141.95
  </p>
</div>
`;
